--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  carousel_slider: ^4.0.0
+  search_page: ^2.0.1
+  url_launcher: ^6.2.1
+  art_sweetalert: ^0.0.5
+  animated_text_kit: ^4.2.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -65,6 +71,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
       - assets/
+      - assets/images/
+      - assets/image_hoteles/
+      - assets/intereses/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
