--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.3.0
   path: ^1.8.3
+  firebase_core: ^2.24.1
+  cloud_firestore: ^4.13.4
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +74,6 @@ flutter:
       - assets/
       - assets/images/
       - assets/image_hoteles/
-      - assets/intereses/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
